--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,15 @@
       {
         "nested-interactive": "off"
       }
-    ]
+    ],
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "width: fit-content"
+        ]
+      }
+    ],
+    "no-inline-styles": "off"
   }
 }
